--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
+    "@angular/animations": "5.0.2",
+    "@angular/common": "5.2.0",
+    "@angular/compiler": "5.0.2",
+    "@angular/core": "5.0.2",
+    "@angular/forms": "5.0.2",
+    "@angular/platform-browser": "5.0.2",
+    "@angular/platform-browser-dynamic": "5.0.2",
+    "@angular/router": "5.0.2",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "3.3.7",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
-    "rxjs": "~6.3.3",
+    "rxjs": "5.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
@@ -31,7 +31,7 @@
     "@angular-devkit/build-angular": "~0.12.0",
     "@angular/cli": "~7.2.3",
     "@angular/compiler-cli": "^7.2.5",
-    "@angular/language-service": "~7.2.0",
+    "@angular/language-service": "5.0.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
